--- a/Root/styles.css
+++ b/Root/styles.css
@@ -1,14 +1,14 @@
 h1 {
     font-family: Brush Script MT;
     color: #8B0000; /* Dark Red */
-    font-size: 24px;
-    text-align: center;
+    font-size: 40px;
+    text-align: left;
 }
 h2 {
     font-family: Brush Script MT;
     color: #8B0000; /* Dark Red */
-    font-size: 20px;
-    text-align: center;
+    font-size: 30px;
+    text-align: left;
 }
 p {
     font-family: 'Times New Roman';
