--- a/Root/styles.css
+++ b/Root/styles.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #E6E6FA; /* Lavender */
+}
+
 h1 {
     font-family: Brush Script MT;
     color: #8B0000; /* Dark Red */
