--- a/Root/styles.css
+++ b/Root/styles.css
@@ -4,13 +4,13 @@ body {
 
 h1 {
     font-family: Brush Script MT;
-    color: #8B0000; /* Dark Red */
+    color: #4B0082; /* Indigo */
     font-size: 40px;
     text-align: left;
 }
 h2 {
     font-family: Brush Script MT;
-    color: #8B0000; /* Dark Red */
+    color: #4B0082; /* Indigo */
     font-size: 30px;
     text-align: left;
 }
