--- a/Root/styles.css
+++ b/Root/styles.css
@@ -10,7 +10,7 @@ h1 {
 }
 h2 {
     font-family: Brush Script MT;
-    color: #4B0082; /* Indigo */
+    color: #4B0082; /*  */
     font-size: 30px;
     text-align: left;
 }
